[gd_scene load_steps=9 format=3 uid="uid://cry6mubphp3w5"]

[ext_resource type="Script" uid="uid://x3w8216piylx" path="res://Scripts/title_screen.gd" id="1_jcnu5"]
[ext_resource type="Texture2D" uid="uid://djh52m0aibcqp" path="res://Sprites/Placeholders/Tela inicial teste.jpeg" id="2_lkw34"]
[ext_resource type="Theme" uid="uid://blqvdusfe7ckm" path="res://defaul_bttn_temp.tres" id="3_wtmfv"]
[ext_resource type="Texture2D" uid="uid://clbgisbyy6q37" path="res://Sprites/RedondoFinal.png" id="4_g2vbp"]
[ext_resource type="Texture2D" uid="uid://d3lsnrb4apuc6" path="res://Sprites/Quadradofinal.png" id="5_f7db3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6v03b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6lse"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aobe8"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jcnu5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 320.0
texture = ExtResource("2_lkw34")

[node name="Temporario" type="Label" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 76.0
offset_right = 361.0
offset_bottom = 99.0
text = "Nome do jogo"

[node name="Nome do jogo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -44.0
offset_right = 136.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="GameLogo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("3_wtmfv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6v03b")
text = "Start"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_b6lse")

[node name="CreditsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_wtmfv")
text = "Credito"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_aobe8")

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_wtmfv")
text = "Exit"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 320.0
color = Color(0.6, 0.6, 1, 0.6)

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 167.0
offset_right = 677.0
offset_bottom = 207.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = -20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = -20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Pula" type="TextureRect" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_g2vbp")
expand_mode = 2
flip_h = true

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 370.0
offset_top = 158.0
offset_right = 535.0
offset_bottom = 238.0
theme_override_constants/margin_left = 21
theme_override_constants/margin_top = -20
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3"]
layout_mode = 2

[node name="Gruda" type="TextureRect" parent="MarginContainer3/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_f7db3")
expand_mode = 3

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
